--- a/Student-PortfolioFinal/client/index.html
+++ b/Student-PortfolioFinal/client/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:description" content="Portfolio of Krisha Shah - Computer Science Undergraduate specializing in Full Stack Development and AI-driven Security Solutions." />
     <meta name="twitter:image" content="https://replit.com/public/images/opengraph.png" />
 
-    <!-- <link rel="icon" type="image/png" href="/favicon.png" /> -->
+    <link rel="icon" type="image/jpg" href="/attached_assets/myphoto.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=JetBrains+Mono:wght@400;500&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
