--- a/Student-PortfolioFinal/client/index.html
+++ b/Student-PortfolioFinal/client/index.html
@@ -7,12 +7,12 @@
     <meta property="og:title" content="Krisha Shah | CS Undergraduate & Full Stack Developer" />
     <meta property="og:description" content="Portfolio of Krisha Shah - Computer Science Undergraduate specializing in Full Stack Development and AI-driven Security Solutions." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://replit.com/public/images/opengraph.png" />
+    <!-- <meta property="og:image" content="https://replit.com/public/images/opengraph.png" /> -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@replit" />
+    <!-- <meta name="twitter:site" content="@replit" /> -->
     <meta name="twitter:title" content="Krisha Shah | CS Undergraduate & Full Stack Developer" />
     <meta name="twitter:description" content="Portfolio of Krisha Shah - Computer Science Undergraduate specializing in Full Stack Development and AI-driven Security Solutions." />
-    <meta name="twitter:image" content="https://replit.com/public/images/opengraph.png" />
+    <!-- <meta name="twitter:image" content="https://replit.com/public/images/opengraph.png" /> -->
 
     <link rel="icon" type="image/png" href="/attached_assets/myphoto.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
